--- a/tools/TestWowEnvironment/TestWowEnvironment.vcxproj
+++ b/tools/TestWowEnvironment/TestWowEnvironment.vcxproj
@@ -141,7 +141,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CMemFile.cpp" />
     <ClCompile Include="TestWowEnvironment.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CMemFile.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
