--- a/tools/TestWowDatabase/TestWowDatabase.vcxproj.filters
+++ b/tools/TestWowDatabase/TestWowDatabase.vcxproj.filters
@@ -69,5 +69,8 @@
     <ClInclude Include="..\Common\varianttype.h">
       <Filter>Common</Filter>
     </ClInclude>
+    <ClInclude Include="..\Common\wowEnums.h">
+      <Filter>Common</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
