--- a/tools/TestWowDatabase/TestWowDatabase.vcxproj
+++ b/tools/TestWowDatabase/TestWowDatabase.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="..\Common\wowDbFile.cpp" />
     <ClCompile Include="..\Common\wowEnvironment.cpp" />
     <ClCompile Include="..\Common\wowTable.cpp" />
+    <ClCompile Include="..\Common\wowWDB5File.cpp" />
     <ClCompile Include="TestWowDatabase.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -184,6 +185,7 @@
     <ClInclude Include="..\Common\wowEnums.h" />
     <ClInclude Include="..\Common\wowEnvironment.h" />
     <ClInclude Include="..\Common\wowTable.h" />
+    <ClInclude Include="..\Common\wowWDB5File.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
