--- a/tools/TestWowDatabase/TestWowDatabase.vcxproj.filters
+++ b/tools/TestWowDatabase/TestWowDatabase.vcxproj.filters
@@ -31,6 +31,9 @@
     <ClCompile Include="..\Common\wowDbFile.cpp">
       <Filter>Common</Filter>
     </ClCompile>
+    <ClCompile Include="..\Common\wowWDB5File.cpp">
+      <Filter>Common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Common\CFileSystem.h">
@@ -70,6 +73,9 @@
       <Filter>Common</Filter>
     </ClInclude>
     <ClInclude Include="..\Common\wowEnums.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\wowWDB5File.h">
       <Filter>Common</Filter>
     </ClInclude>
   </ItemGroup>
