--- a/tools/TestWowDatabase/TestWowDatabase.vcxproj.filters
+++ b/tools/TestWowDatabase/TestWowDatabase.vcxproj.filters
@@ -34,6 +34,9 @@
     <ClCompile Include="..\Common\wowWDB5File.cpp">
       <Filter>Common</Filter>
     </ClCompile>
+    <ClCompile Include="..\Common\wowWDC3File.cpp">
+      <Filter>Common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Common\CFileSystem.h">
@@ -76,6 +79,9 @@
       <Filter>Common</Filter>
     </ClInclude>
     <ClInclude Include="..\Common\wowWDB5File.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\wowWDC3File.h">
       <Filter>Common</Filter>
     </ClInclude>
   </ItemGroup>
