--- a/tools/TestWowGameFile/TestWowGameFile.vcxproj.filters
+++ b/tools/TestWowGameFile/TestWowGameFile.vcxproj.filters
@@ -38,6 +38,9 @@
       <Filter>Common</Filter>
     </ClCompile>
     <ClCompile Include="TestWowGameFile.cpp" />
+    <ClCompile Include="..\Common\wowWMOFile.cpp">
+      <Filter>Common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Common\CFileSystem.h">
@@ -83,6 +86,39 @@
       <Filter>Common</Filter>
     </ClInclude>
     <ClInclude Include="..\Common\wowWDC3File.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\aabbox3d.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\frustum.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\matrix4.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\plane3d.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\quaternion.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\vector3d.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\wowWMOFile.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\S3DVertex.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\SColor.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\vector2d.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\base.h">
       <Filter>Common</Filter>
     </ClInclude>
   </ItemGroup>
